# redis-openai-agents

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/: release-drafter-config.yml
.github/workflows/: coverage-gist.yml  docs.yml  lint.yml  release-drafter.yml  release.yml  test.yml
docs/: conf.py  index.md
docs/_static/: gallery.yaml
docs/_templates/: versioning.html
docs/api/: index.md
docs/examples/: index.md
docs/overview/: architecture.md  index.md  installation.md
docs/user_guide/: 01_sessions.ipynb  02_semantic_cache.ipynb  03_semantic_router.ipynb  04_vector_search.ipynb  05_streaming.ipynb  06_metrics.ipynb  07_agent_coordination.ipynb  08_hybrid_search.ipynb  09_middleware.ipynb  10_tool_caching.ipynb  index.md
examples/: .env.example  01-routing-agents.ipynb  02-semantic-cache.ipynb  03-vector-search.ipynb  04-full-text-search.ipynb  05-token-streaming.ipynb  06-time-series-metrics.ipynb  07-full-stack-integration.ipynb  08-runner-integration.ipynb  09-hybrid-search.ipynb  10-agent-ranking.ipynb  11-deduplication.ipynb  12-agent-coordinator.ipynb  13-robust-streaming.ipynb  14-atomic-operations.ipynb  15-semantic-router.ipynb  16-middleware.ipynb  17-tool-caching.ipynb  18-rate-limiting.ipynb  19-file-search-tool.ipynb  20-caching-model.ipynb  Dockerfile.jupyter  README.md  docker-compose.yml
scripts/: setup.sh
src/redis_openai_agents/: __init__.py  atomic.py  cache.py  caching_model.py  coordinator.py  deduplication.py  hybrid.py  json_session.py  metrics.py  pool.py  prometheus.py  ranking.py  rate_limit_guardrail.py  resumable_streaming.py  retry.py  robust_processor.py  runner.py  sdk_tools.py  search.py  semantic_router.py  session.py  streams.py  tool_cache.py  tracing.py  vector.py
src/redis_openai_agents/lua_scripts/: atomic_handoff.lua  atomic_message_append.lua  atomic_response_record.lua
src/redis_openai_agents/middleware/: __init__.py  _response.py  _utils.py  base.py  conversation_memory.py  semantic_cache.py  semantic_router.py  stack.py
tests/: conftest.py  docker-compose.yml  test_agent_coordinator_integration.py  test_agent_coordinator_unit.py  test_agent_session_basic.py  test_async_support_unit.py  test_cache_unit.py  test_caching_model.py  test_caching_model_integration.py  test_connection_pool_unit.py  test_deduplication_integration.py  test_deduplication_unit.py  test_full_text_search_unit.py  test_hybrid_search_integration.py  test_hybrid_search_unit.py  test_json_session_integration.py  test_json_session_unit.py  test_lua_atomic_integration.py  test_lua_atomic_unit.py  test_metrics_unit.py  test_middleware_conversation_memory.py  test_middleware_semantic_cache.py  test_middleware_semantic_router.py  test_middleware_unit.py  test_prometheus_unit.py  test_ranked_operations_integration.py  test_ranked_operations_unit.py  test_rate_limit_guardrail.py  test_rate_limit_guardrail_integration.py  test_resumable_streaming.py  test_resumable_streaming_integration.py  test_retry_unit.py  test_robust_stream_processor_integration.py  test_robust_stream_processor_unit.py  test_runner_integration_unit.py  test_sdk_tools_integration.py  test_sdk_tools_unit.py  test_sdk_tracing_integration.py  test_sdk_tracing_unit.py  test_semantic_router.py  (+6 more)
